# Taken-minds

./: main.py  newfile.py  pyproject.toml  requirements.txt
